--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,6 @@
 {
     "name": "snappdoctor/php-rest-response",
+    "description": "",
     "type": "library",
     "license": "MIT",
     "authors": [
@@ -11,7 +12,12 @@
     "minimum-stability": "dev",
     "autoload": {
         "psr-4": {
-            "DrResponse\\" : "src/"
+            "DrResponse\\": "src/"
+        }
     },
-    "require": {}
+    "require": {
+        "php": ">=7.1.0",
+        "symfony/http-foundation": "5.x-dev",
+        "ext-json": "*"
+    }
 }
