--- a/composer.json
+++ b/composer.json
@@ -16,8 +16,8 @@
         }
     },
     "require": {
-        "php": ">=7.1.0",
-        "symfony/http-foundation": "5.x-dev",
-        "ext-json": "*"
+        "php": ">=7.0.0",
+        "ext-json": "*",
+        "symfony/http-foundation": "5.x-dev"
     }
 }
